--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,10 @@
     <title>My website</title>
 </head>
 <body>
-    <h1>{{ headLine }}</h1>
+    {% if new_year %}
+    <h1>Yes! Happy new year!</h1>
+    {% else %}
+    <h1>No!</h1>
+    {% endif %}
 </body>
 </html>
