Routing from one router's html page to another router's html page

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,13 +6,9 @@
     <title>My website</title>
 </head>
 <body>
-    <h1>Names</h1>
-    <ul>
-        {% for name in names %}
-        <li>{{ name }}</li>
-        {% endfor %}
-    </ul>
-    
+    <h1>First page!</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis facere commodi fugit, sequi deserunt pariatur earum accusantium mollitia quidem ut veniam optio inventore libero, deleniti molestias. Temporibus a quos nostrum.</p>
+    <a href="{{ url_for('more') }}">See here!</a>
    
 </body>
 </html>
