--- a/templates/more.html
+++ b/templates/more.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Second page!</h1>
+
+    {% extends "layout.html" %}
+    {% block heading %}
+        Second Page!
+    {% endblock %}
+    
+    {% block body %}
+    <p>doren hfha8e jajsdk</p>
     <a href="{{ url_for('index') }}"> go to first page!</a>
-</body>
-</html>
+    {% endblock %}
