--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,12 @@
 
     {% extends "layout.html" %}
     {% block heading %}
-        First Page!
+        Form Page
     {% endblock %}
 
     {% block body %}
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis facere commodi fugit, sequi deserunt pariatur earum accusantium mollitia quidem ut veniam optio inventore libero, deleniti molestias. Temporibus a quos nostrum.</p>
-    <a href="{{ url_for('more') }}">See here!</a>
+    <form action="{{url_for('more')}}" method="POST">
+        <input type="text" name="name" placeholder="Enter your name">
+        <button>Submit</button>
+    </form>
     {% endblock %}
