--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,13 @@
     {% endblock %}
 
     {% block body %}
-    <form action="{{url_for('more')}}" method="POST">
-        <input type="text" name="name" placeholder="Enter your name">
+    <ul>
+        {% for note in notes %}
+        <li>{{note}}</li>
+        {% endfor %}
+    </ul>
+    <form action="{{url_for('note')}}" method="POST">
+        <input type="text" name="note" placeholder="Enter your note here">
         <button>Submit</button>
     </form>
     {% endblock %}
